fix(daily-habit): check not showing correctly

--- a/src/app/home/components/daily-habit/daily-habit.component.scss
+++ b/src/app/home/components/daily-habit/daily-habit.component.scss
@@ -16,7 +16,7 @@
     &.is-completed {
       background-color: $color-item-completed-bg;
 
-      #{$cmp}-check {
+      #{$cmp}__check {
         background-color: $color-highlight;
         color: $color-white;
         box-shadow: 0;
